libs/toolkit-canonical-errors/tests/ui/missing_reason_on_unauthenticated.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<toolkit_canonical_errors::builder::ResourceOptional, toolkit_canonical_errors::builder::NeedsReason>`, but its trait bounds were not satisfied
 --> tests/ui/missing_reason_on_unauthenticated.rs:7:50
  |
7 |     let _err = CanonicalError::unauthenticated().create();
  |                                                  ^^^^^^ method cannot be called due to unsatisfied trait bounds
  |
 ::: src/builder.rs
  |
  | pub struct NeedsReason;
  | ---------------------- doesn't satisfy `_: ContextResolved`
  |
  = note: the following trait bounds were not satisfied:
          `toolkit_canonical_errors::builder::NeedsReason: toolkit_canonical_errors::builder::ContextResolved`
